<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#79BCBABA"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/tv_wp"
        android:layout_width="321dp"
        android:layout_height="67dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="-650dp"
        android:fontFamily="@font/sonsie_one"
        android:text="@string/my_workout_plan"
        android:textColor="@color/purple_700"

        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_au"
        android:layout_width="183dp"
        android:layout_height="35dp"
        android:layout_marginTop="-250dp"
        android:fontFamily="serif"
        android:text="@string/anonymus_user"
        android:textColor="@color/white"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_au">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_add_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_add_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_add_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="serif"
        android:text="@string/tv_don_t_have_an_account_register_here"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_add_password" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="165dp"
        android:layout_height="42dp"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="90dp"
        android:background="@color/white"
        android:text="@string/sign_up"
        android:textColor="@color/black"

        app:iconSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_register_google"
        android:layout_width="164dp"
        android:layout_height="51dp"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="90dp"
        android:text="@string/sign_up_with_google"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="149dp"
        android:layout_height="100dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_au"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_person_foreground" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_register_google"
        app:layout_constraintLeft_toLeftOf="@id/btn_register_google"
        app:srcCompat="@drawable/ic_icons8_google"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="280dp"
        android:text="@string/go"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>